tests/fixtures/valid/ngl004_valid.py
from nicegui import ui

with ui.column().classes('min-h-0'):
    ui.scroll_area().classes('h-full')
