tests/fixtures/invalid/ngl004_invalid.py
from nicegui import ui

with ui.column():
    with ui.column():
        ui.scroll_area().classes('h-full')
